[package]
name = "search_engine"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
prost = "0.12.3"
tonic = "0.11.0"
anyhow = "1.0.80"
futures = "0.3.30"
reqwest = "0.11.24"
tantivy = "0.21.1"
tempfile = "3.10.1"
tracing = { version = "^0.1", default-features = false, features = ["attributes"] }
scraper = { version = "0.19.0",  default-features = false }
async-recursion = { version = "^1.0",  default-features = false }
robotstxt = { version = "^0.3",  default-features = false }
indexmap = { version = "2.2.5",  default-features = false }
mime = { version = "^0.3",  default-features = false }
infer = { version = "^0.15",  default-features = false, features = ["std"] }
tracing-subscriber = "0.3.18"

[build-dependencies]
tonic-build = { version = "0.11.0", features = ["prost"] }
